--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,114 +1,81 @@
 <!DOCTYPE html>
-<html lang="zxx">
-<head>
-	<title>Time - Tracker</title>
-	<meta charset="UTF-8">
-	<!-- Favicon -->
-	<link href="{{asset('img/favicon.ico')}}" rel="shortcut icon"/>
+<html lang="en">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>Time Tracker</title>
+		<link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
+		<link rel="stylesheet" href="vendors/owl.carousel/css/owl.carousel.css">
+		<link rel="stylesheet" href="vendors/owl.carousel/css/owl.theme.default.min.css">
+		<link rel="stylesheet" href="vendors/aos/css/aos.css">
+		<link rel="stylesheet" href="vendors/jquery-flipster/css/jquery.flipster.css">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="shortcut icon" href="images/favicon.ico"/>
+	</head>
 
-	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-
-
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="{{asset('css/bootstrap.min.css')}}"/>
-	<link rel="stylesheet" href="{{asset('css/font-awesome.min.css')}}"/>
-	<link rel="stylesheet" href="{{asset('css/slicknav.min.css')}}"/>
-	<link rel="stylesheet" href="{{asset('css/owl.carousel.min.css')}}"/>
-	<link rel="stylesheet" href="{{asset('css/magnific-popup.css')}}"/>
-	<link rel="stylesheet" href="{{asset('css/animate.css')}}"/>
-
-	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="{{asset('css/style.css')}}"/>
-
-
-	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-<body>
-	<!-- Page Preloder -->
-	<div id="preloder">
-		<div class="loader"></div>
-	</div>
-
-	<!-- Header section -->
-	<header class="header-section">
-		<div class="header-warp">
-			<div class="header-bar-warp d-flex">
-				<!-- site logo -->
-				<a href="{{ path('home')}}" class="site-logo">
-					<img src="{{asset('./img/logo.png')}}" alt="">
-				</a>
-				<nav class="top-nav-area w-100">
-					<div class="user-panel">
-						<a href="">Login</a> / <a href="">Register</a>
+			<body data-spy="scroll" data-target=".navbar" data-offset="50">
+		<div id="mobile-menu-overlay"></div>
+		<nav class="navbar navbar-expand-lg fixed-top">
+			<div class="container">
+				<a class="navbar-brand" href="#"><img src="{{asset('images/logo.png')}}" alt="Time Tracker Icon"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon">
+						<i class="mdi mdi-menu"></i>
+					</span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+					<div class="d-lg-none d-flex justify-content-between px-4 py-3 align-items-center">
+						<img src="{{asset('images/logo-dark.svg')}}" class="logo-mobile-menu" alt="logo">
+						<a href="javascript:;" class="close-menu">
+							<i class="mdi mdi-close"></i>
+						</a>
 					</div>
-					<!-- Menu -->
-					<ul class="main-menu primary-menu">
-						<li><a href="{{ path('home')}}">Home</a></li>
-						<li><a href="games.html">Games</a>
-							<ul class="sub-menu">
-								<li><a href="game-single.html">Game Singel</a></li>
-							</ul>
+					<ul class="navbar-nav ml-auto align-items-center">
+						<li class="nav-item active">
+							<a class="nav-link" href="#home">Home
+								<span class="sr-only">(current)</span>
+							</a>
 						</li>
-						<li><a href="review.html">Reviews</a></li>
-						<li><a href="blog.html">News</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li class="nav-item">
+							<a class="nav-link" href="#tasks">Dodaj zadanie</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#about">Historia pracy</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link btn btn-success" href="#contact">Logowanie</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link btn btn-danger" href="#contact">Rejestracja</a>
+						</li>
 					</ul>
-				</nav>
+				</div>
 			</div>
+		</nav>
+		
+	{% block body %}{% endblock %}
+
+	<footer class="footer">
+		<div class="footer-bottom">
+			<div class="container">
+				<div class="d-flex justify-content-between align-items-center">
+					<div class="d-flex align-items-center">
+						<img src="{{asset('images/logo.png')}}" alt="logo" class="mr-3"></br>
+				</div>
+
+				<div>
+					<div class="d-flex">
+						<a href="#" class="text-small text-white mx-2 footer-link">Privacy Policy
+						</a>
+						<a href="#" class="text-small text-white mx-2 footer-link">Customer Support
+						</a>
+						<a href="#" class="text-small text-white mx-2 footer-link">Careers Guide</a>
+					</div>
+				</div>
+			</div>
+
 		</div>
-	</header>
-	<!-- Header section end -->
-    {% block body %}
-    
-    {% endblock %}
-	
-	{% block footer %}
-	<!-- Footer section -->
-	<footer class="footer-section">
-		<div class="container">
-			<div class="footer-left-pic">
-				<img src="img/footer-left-pic.png" alt="">
-			</div>
-			<div class="footer-right-pic">
-				<img src="img/footer-right-pic.png" alt="">
-			</div>
-			<a href="#" class="footer-logo">
-				<img src="./img/logo.png" alt="">
-			</a>
-			<ul class="main-menu footer-menu">
-				<li><a href="{{ path('home')}}">Home</a></li>
-				<li><a href="">Games</a></li>
-				<li><a href="">Reviews</a></li>
-				<li><a href="">News</a></li>
-				<li><a href="">Contact</a></li>
-			</ul>
-			<div class="footer-social d-flex justify-content-center">
-				<a href="#"><i class="fa fa-pinterest"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-behance"></i></a>
-			</div>
-		</div>
-	</footer>
-	{% endblock %}
-	<!-- Footer section end -->
-
-
-	<!--====== Javascripts & Jquery ======-->
-	<script src="{{asset('js/jquery-3.2.1.min.js')}}"></script>
-	<script src="{{asset('js/bootstrap.min.js')}}"></script>
-	<script src="{{asset('js/jquery.slicknav.min.js')}}"></script>
-	<script src="{{asset('js/owl.carousel.min.js')}}"></script>
-	<script src="{{asset('js/jquery.sticky-sidebar.min.js')}}"></script>
-	<script src="{{asset('js/jquery.magnific-popup.min.js')}}"></script>
-	<script src="{{asset('js/main.js')}}"></script>
-
-	</body>
-</html>
+	</div>
+</html></body></html></footer><script src="{{asset('vendors/base/vendor.bundle.base.js')}}"></script><script src="{{asset('vendors/owl.carousel/js/owl.carousel.js')}}"></script><script src="{{asset('vendors/aos/js/aos.js')}}"></script><script src="{{asset('vendors/jquery-flipster/js/jquery.flipster.min.js')}}"></script><script src="{{asset('js/template.js')}}"></script></body></html>
 
