--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,24 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-
-	<!-- Hero section -->
-	<section class="hero-section overflow-hidden">
-		<div class="hero-slider owl-carousel">
-			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="{{asset('img/slider-bg-1.jpg')}}">
+		<div class="page-body-wrapper">
+			<section id="home" class="home">
 				<div class="container">
-					<a href="#" class="site-btn">Kliknij aby sprawdzić więcej<img src="{{asset('img/icons/double-arrow.png')}}" alt="#"/></a>
-				</div>
-			</div>
-			<div class="hero-item set-bg d-flex align-items-center justify-content-center text-center" data-setbg="{{asset('img/slider-bg-2.jpg')}}">
-				<div class="container">
-					<a href="#" class="site-btn">Kliknij aby sprawdzić więcej<img src="{{asset('img/icons/double-arrow.png')}}" alt="#"/></a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Hero section end-->
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="main-banner">
+								<div class="d-sm-flex justify-content-between">
+									<div data-aos="zoom-in-up">
+										<div class="banner-title">
+											<h3 class="font-weight-medium">Monitoruj czas swojej pracy
+											</h3>
+										</div>
+										<p class="mt-3">Historia poświęconego czasu na pracę zawsze pod ręką.
 
+											<br>
+											Monitoruj, analizuj, wyciągaj wnioski,
+										</p>
+										<a href="{{ path('user_tasks') }}" class="btn btn-secondary mt-3">Zacznij teraz</a>
+									</div>
+									<div class="mt-5 mt-lg-0">
+										<img src="{{asset('images/group.png')}}" alt="marsmello" class="img-fluid" data-aos="zoom-in-up">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 {% endblock %}
