--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,7 +20,7 @@
 											<br>
 											Monitoruj, analizuj, wyciągaj wnioski,
 										</p>
-										<a href="{{ path('user_tasks') }}" class="btn btn-secondary mt-3">Zacznij teraz</a>
+										<a href="{{ path('login') }}" class="btn btn-secondary mt-3">Zacznij teraz</a>
 									</div>
 									<div class="mt-5 mt-lg-0">
 										<img src="{{asset('images/group.png')}}" alt="marsmello" class="img-fluid" data-aos="zoom-in-up">
