--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,11 +14,11 @@
 		<link rel="shortcut icon" href="images/favicon.ico"/>
 	</head>
 
-			<body data-spy="scroll" data-target=".navbar" data-offset="50">
+	<body data-spy="scroll" data-target=".navbar" data-offset="50">
 		<div id="mobile-menu-overlay"></div>
 		<nav class="navbar navbar-expand-lg fixed-top">
 			<div class="container">
-				<a class="navbar-brand" href="#"><img src="{{asset('images/logo.png')}}" alt="Time Tracker Icon"></a>
+				<a class="navbar-brand" href="{{ path('home') }}"><img src="{{asset('images/logo.png')}}" alt="Time Tracker Icon"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon">
 						<i class="mdi mdi-menu"></i>
@@ -26,14 +26,13 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
 					<div class="d-lg-none d-flex justify-content-between px-4 py-3 align-items-center">
-						<img src="{{asset('images/logo-dark.svg')}}" class="logo-mobile-menu" alt="logo">
 						<a href="javascript:;" class="close-menu">
 							<i class="mdi mdi-close"></i>
 						</a>
 					</div>
 					<ul class="navbar-nav ml-auto align-items-center">
 						<li class="nav-item active">
-							<a class="nav-link" href="#home">Home
+							<a class="nav-link" href={{ path('home') }} ">Home
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
@@ -44,38 +43,42 @@
 							<a class="nav-link" href="#about">Historia pracy</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-success" href="#contact">Logowanie</a>
+							<a class="nav-link" href="{{ path ('logout') }}">Wyloguj</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-danger" href="#contact">Rejestracja</a>
+							<a class="nav-link btn btn-success" href="{{ path ('login') }}">Logowanie</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link btn btn-danger" href="{{ path ('registration') }}">Rejestracja</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-		
-	{% block body %}{% endblock %}
 
-	<footer class="footer">
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="d-flex justify-content-between align-items-center">
-					<div class="d-flex align-items-center">
-						<img src="{{asset('images/logo.png')}}" alt="logo" class="mr-3"></br>
-				</div>
+		{% block body %}{% endblock %}
 
-				<div>
-					<div class="d-flex">
-						<a href="#" class="text-small text-white mx-2 footer-link">Privacy Policy
-						</a>
-						<a href="#" class="text-small text-white mx-2 footer-link">Customer Support
-						</a>
-						<a href="#" class="text-small text-white mx-2 footer-link">Careers Guide</a>
+		<footer class="footer">
+			<div class="footer-bottom">
+				<div class="container">
+					<div class="d-flex justify-content-between align-items-center">
+						<div class="d-flex align-items-center">
+							<img src="{{asset('images/logo.png')}}" alt="logo" class="mr-3"></br>
+					</div>
+
+					<div>
+						<div class="d-flex">
+							<a href="#" class="text-small text-white mx-2 footer-link">Privacy Policy
+							</a>
+							<a href="#" class="text-small text-white mx-2 footer-link">Customer Support
+							</a>
+							<a href="#" class="text-small text-white mx-2 footer-link">Careers Guide</a>
+						</div>
 					</div>
 				</div>
-			</div>
 
+			</div>
 		</div>
-	</div>
+	</body>
 </html></body></html></footer><script src="{{asset('vendors/base/vendor.bundle.base.js')}}"></script><script src="{{asset('vendors/owl.carousel/js/owl.carousel.js')}}"></script><script src="{{asset('vendors/aos/js/aos.js')}}"></script><script src="{{asset('vendors/jquery-flipster/js/jquery.flipster.min.js')}}"></script><script src="{{asset('js/template.js')}}"></script></body></html>
 
