--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,21 +36,27 @@
 								<span class="sr-only">(current)</span>
 							</a>
 						</li>
+						{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 						<li class="nav-item">
-							<a class="nav-link" href="#tasks">Dodaj zadanie</a>
+							<a class="nav-link" href="{{ path ('user_tasks') }}">Dodaj zadanie</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#about">Historia pracy</a>
 						</li>
+						{% endif %}
+						{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path ('logout') }}">Wyloguj</a>
 						</li>
+						{% endif %}
+						{% if not is_granted('IS_AUTHENTICATED_FULLY') %}
 						<li class="nav-item">
 							<a class="nav-link btn btn-success" href="{{ path ('login') }}">Logowanie</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link btn btn-danger" href="{{ path ('registration') }}">Rejestracja</a>
 						</li>
+						{% endif %}
 					</ul>
 				</div>
 			</div>
