--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,46 +1,45 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger text-center">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<form method="post">
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
 
-<br>
-<div class="container">
+		{% if app.user %}
+			<div class="container">
+				<div class="mb-3">
+					You are logged in as
+					{{ app.user.username }},
+					<a href="{{ path('app_logout') }}">Logout</a>
+				</div>
+			</div>
+		{% endif %}
 
-<h3>Please Log in</h3>
-<br>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+		<br>
+		<section class="contactus">
+			<div class="container">
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+				<h3 class="text-center">Logowanie</h3>
+				<br>
+				<label for="inputUsername">Nazwa Użytkownika</label>
+				<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" required autofocus>
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+				<label for="inputPassword">Hasło</label>
+				<input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
+                {% if error %}
+					
+						<div class="alert alert-danger text-center">{{ 'Dane są nieprawidłowe, spróbuj ponownie' }}</div>
+					
+				{% endif %}
 
-    <br>
-    <button class="btn btn-lg btn-primary" type="submit">
-        Login
-    </button>
-</form>
-</div>
-{% endblock %}
+				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+				<br>
+				<button class="btn btn-lg btn-primary" type="submit">
+					Login
+				</button>
+			</form>
+		</section>>
+
+	{% endblock %}
+
