--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 	<form method="post">
 
 
-		{% if app.user %}
+		{# {% if app.user %}
 			<div class="container">
 				<div class="mb-3">
 					You are logged in as
@@ -12,7 +12,7 @@
 					<a href="{{ path('app_logout') }}">Logout</a>
 				</div>
 			</div>
-		{% endif %}
+		{% endif %} #}
 
 		<br>
 		<section class="contactus">
