--- a/templates/user_tasks/index.html.twig
+++ b/templates/user_tasks/index.html.twig
@@ -2,18 +2,19 @@
 
 {% block body %}
 
-	{% for message in app.flashes('success') %}
-		<div class="alert alert-success text-center">
-			<h4>{{ message }}</h4>
-		</div>
-	{% endfor %}
-
 
 	<section class="contactus" id="contact">
 		<div class="container">
 			<div class="row mb-5 pb-5">
 				<div class="col-sm-5" data-aos="fade-up" data-aos-offset="-500">
 
+					{% for message in app.flashes('success') %}
+						<div class="container">
+							<div class="alert alert-success text-center">
+								<h4>{{ message }}</h4>
+							</div>
+						</div>
+					{% endfor %}
 					<div class="container">
 						<div class="page-header">
 							<h3 class="font-weight-medium text-dark mt-5 mt-lg-0">
@@ -43,12 +44,12 @@
 						<div class="row">
 							<div class="col-sm-12">
 								<div class="form-group">
-									<textarea name="task-subject" id="task-subject" class="form-control" placeholder="Opis Twojej pracy*" rows="5"></textarea>
-									<input type="hidden" id="amount_of_time" name="amount_of_time" value="">
+									<textarea name="task-subject" id="task-subject" class="form-control" placeholder="Opis Twojej pracy*" rows="3" required="required"></textarea>
+									<input type="hidden" class="form-control" id="amount_of_time" name="amount_of_time" value="">
 								</div>
 							</div>
 							<div class="col-sm-12">
-								<a href= "{{ path('task_create') }}" class="btn btn-secondary mt-3 text-white" type="submit">ZAPISZ</a>
+								<button class="btn btn-secondary mt-3 text-white" type="submit">ZAPISZ</button>
 							</div>
 						</div>
 					</form>
